syntax = "proto3";

package chatroom.msgpb;

message GroupMember {
    string name = 1;
    uint32 id = 2;
    int32 privilege = 3;
}

message GetGroupInfoAck {
    string group_name = 1;
    repeated GroupMember members_info = 2;
}